tests/NormalTests/paczka1/fuzzy1/53426449.err
Error in line 3: OE3c S17 18,5
Error in line 1: wWl3bI7 S479 81,3
Error in line 7: wWl3bI7 S204 10,4
Error in line 9: XonF1f S479 31,9
Error in line 22: ÂAyxCT6zE S479 68,4
Error in line 23: WPmlDHDp22 S204 15,2
Error in line 26: cAyxCT6zE S223 3,9
Error in line 15: XonF1f S223 85,9
Error in line 36: XonF1f S479 76,8
